fix: realign margins in Section top

--- a/SCSS/_config.scss
+++ b/SCSS/_config.scss
@@ -9,7 +9,7 @@ $max-width: 1100px;
 // Set Text color based on function
 
 @function set-text-color($color){
-  @if(lightness($color)> 50){
+  @if(lightness($color)> 60){
     @return #333;
   }@else{
     @return  #fff;
