--- a/SCSS/_utilities.scss
+++ b/SCSS/_utilities.scss
@@ -7,7 +7,7 @@
   padding: 0 2rem;
   margin-top: 6rem;
   margin-bottom: 3rem;
-  border: 2px solid red;
+
 }
 
 
@@ -34,6 +34,16 @@
   color: $primary-color;
 }
 
+.round-img{
+  border-radius: 50%;
+}
+
+.line{
+  height: 1px;
+  background: #ccc;
+  margin: 1.5rem 0;
+}
+
 // backgrounds
 
 .bg{
@@ -55,6 +65,7 @@
   }
   &-white {
     @include set-background(#fff);
+    border: #ccc 1px solid;
   }
 }
 
@@ -98,6 +109,30 @@
   }
   &:hover{
     background: lighten($dark-color, 20%);
+  }
+}
+
+
+//alerts
+
+.alert{
+  padding: 0.8rem;
+  margin: 1rem;
+  opacity: 0.8;
+  background: $light-color;
+  color: #333;
+
+  &.alert-primary{
+    @include set-background($primary-color)
+  }
+  &.alert-dark {
+    @include set-background($dark-color)
+  }
+  &.alert-success {
+    @include set-background($success-color)
+  }
+  &.alert-danger {
+    @include set-background($danger-color)
   }
 }
 
